syntax = "proto3";

package filesyncpb;
option go_package = "synthesize/protos";

import "google/protobuf/timestamp.proto";

message FileChunk {
  string filename = 1;
  bytes data = 2;
  int32 chunk_number = 3;
  bool is_last = 4;
}

message FolderChunk {
  string foldername = 1;
  FileChunk file_chunk = 2;
  string sender_ip = 3; // <-- new field
}

message Ack {
  bool received = 1;
  string message = 2;
}

message ConnectionRequest {
  string requester_id = 1;
  string requester_name = 2;
}

message ConnectionResponse {
  bool accepted = 1;
  string message = 2;
}

message UpdateRequest {
  string filePath = 1;
  string IP = 2;
  google.protobuf.Timestamp timestamp = 3;
}

message UpdateResponse {
  bool accepted = 1;
  string message = 2;
}

message FileUpdate {
  bytes data = 1;
  string filePath = 2;
  google.protobuf.Timestamp timestamp = 3;
}

message Empty {}

service FileSyncService {
  rpc SendFile(FileChunk) returns (Ack);
  rpc ReceiveFile(Empty) returns (stream FileChunk);
  rpc RequestConnection(ConnectionRequest) returns (ConnectionResponse);
  rpc ReceiveFolder(stream FolderChunk) returns (Ack);
  rpc RequestUpdate(UpdateRequest) returns (UpdateResponse);
  rpc ReceiveUpdatedFile(FileUpdate) returns (Ack);
}
